feat: 增加支援 GraalVM